vthread preview