@@ -15,7 +15,7 @@
   <name>demo</name>
   <description>Demo project for Spring Boot</description>
   <properties>
-    <java.version>17</java.version>
+    <java.version>20</java.version>
     <vaadin.version>24.0.5</vaadin.version>
     <snakeyaml.version>2.0</snakeyaml.version>
   </properties>
@@ -134,6 +134,7 @@
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
+          <jvmArguments>--enable-preview</jvmArguments>
         </configuration>
       </plugin>
     </plugins>
